--- a/report.tex
+++ b/report.tex
@@ -255,35 +255,16 @@ web application, Generative Design, integrated development environment
 \subsubsection{Processing.}
 	Processing\cite{reas2007processing} is a programming language and a development environment aimed at ``promoting software literacy in the visual arts and visual literacy within technology''.
 	\footnote{Quoting www.processing.org, 9/Nov/2015.}
-	It has an heavy focus on encouraging interaction between its users and so has attracted a big community.
 	
-	Processing makes it easy to start writing programs that produce visual output. 
-	The only step required to start using it is the download and installation of one of its releases. 
-	After the installation, one can start the \ac{pde} and write a new program, a \emph{sketch} as it is referred within Processing. 
-	Its website also provides a set of tutorials and documentation to help users learn how to use it.
+	Processing enables everyone to write programs that both draw to the screen and react to input from the user, like moving the mouse or pressing a key on the keyboard.
+	It makes this possible by implementing most of the functionality (boilerplate code) that is required, like initializing the drawing surface.
+	The programmer only has to implement the functionality that is specific to what result he wants to achieve.
+	The code in Listing \ref{lst:simple:processing}, for instance, is what is needed to setup a drawing canvas, its background color and continuously draw a line from the mouse position to a point on the canvas.
+	All the code is relevant to the purpose of the program.
 	
-	We decided to analyze Processing due to its use in producing visual output (both 2D and 3D) and to its success.
-	We start by analyzing its programming language, then move to its development environment and finish by evaluating it against \emph{our learnable programming principles}.
-	
-	%TODO fucking shrink processing description
-	%\subsubsubsection{Processing's programming language}
-	Processing's programming language aims to provide Java-style programming while making it easy to quickly write functioning programs. 
-	
-	Every program written in Processing is called a \emph{sketch}. 
-	All \emph{sketches} are stored in a \emph{sketchbook}.
-	
-	A \emph{sketchbook} has a set of resources, such as images or videos, that can be used by \emph{sketches} that are stored in it.
-	
-	A \emph{sketch} is a list of instructions to draw something. 
-	Some examples of instructions are drawing a shape, like a rectangle, changing the colors used for drawing lines or filling shapes, and changing the color of the background.
-	
-	To simplify the \emph{sketch}, named functions can be defined to group instructions. 
-	These functions can then be used as instructions throughout the rest of the \emph{sketch}.
-	
-	A \emph{sketch} can be a static sketch or a dynamic sketch. 
-	A static sketch produces a static image while a dynamic sketch produces a series of images. 
-	A dynamic sketch includes at least a list instructions of what to do to draw each image; it can also include instructions of what to do to respond to input from the viewer of the \emph{sketch}.
-	
+	To use Processing's programming language, one needs to use the \ac{pde}.
+	As shown in Fig. \ref{fig:proc:dev:env}, the \ac{pde} includes a text editor with syntax highlighting and runs Processing programs.
+
 	\lstset{ %
 		basicstyle=\tt\small,
 		numbers=left,
@@ -303,20 +284,6 @@ void draw() {
 }
 	\end{lstlisting}
 	
-	The code in \ref{lst:simple:processing} shows a simple \emph{sketch} with the typical \emph{sketch} structure. 
-	The \emph{sketch} draws a white line from one point to the mouse's position. 
-	It defines the function ``setup'' and  ``draw'' that specify how to setup for drawing and specify how to draw each image. 
-	The ``setup'' is run once when the sketch is started and ``draw'' is repeatedly run afterwards.
-	
-	%\subsubsubsection{Processing's programming environment}
-	The \ac{pde} is shown in Fig. \ref{fig:proc:dev:env}. 
-	It is a code editor dedicated to writing Processing \emph{sketches}. 
-	It supports common tasks performed while writing them, such as running the currently opened \emph{sketch}, adding/creating resources to the \emph{sketchbook} or exporting \emph{sketches} as executables for several platforms. 
-	It also enables the use of multiple files to structure the \emph{sketch's} code.
-	
-	The \ac{pde} only aims to be an introductory environment for programming. 
-	It does not replace an advanced software development \ac{ide}.
-	
 	\begin{figure}
 		\centering
 		\includegraphics[width=1.0\textwidth]{img/proc_dev_env}
@@ -324,20 +291,6 @@ void draw() {
 		\label{fig:proc:dev:env}
 	\end{figure} 
 	
-	%\subsection{Processing vs Programming for Everyone}
-	%This is a comparison with Java. It can be seen as a limitation.
-	Looking at the code in \ref{lst:simple:processing} also reveals the language's resemblance with Java. 
-	The same code fragment in Java declares two methods named ``setup'' and ``draw'' that return nothing; both methods belong to whatever class they happen to be inside of; and both have a list of statements to be executed sequentially when they are invoked. 
-	Processing's instructions, functions and sketches map to Java's statements, methods and classes.
-	%Classes inside sketches are mapped into inner classes.
-	
-	%Describe what the language and the environment lack to improve the programming experience for its users and uses (arts). 
-	%Describe how it is just a quick start package for graphics programming in Java. 
-	%Describe how the environment not only lacks a debugger but also does not give proper error messages when something fails and does not provide other ways to follow the program execution.
-	%Describe how the environment fails to be a better environment than those used in industry software production (like Eclipse).
-	%Describe how its users are required to look for documentation when programming.
-	%Describe how little feedback the environment provides. E.g. he has to run the sketch to see if it compiles and runs as he expects. This blocks creation by reaction.
-	%Describe how trying to hide Java does not make it a better language for learning or producing art. For doing more advanced things, Processing still requires the programmer to know Java; why not learn Java straight away? Processing tries to hide Java's metaphors, its objects; bad idea. (Scala does a better job, I suppose)
 
 \subsubsection{DesignScript.}
 	%collections can be used everywhere one thing can be used
